# rust-authentication

./: .env.example  Cargo.toml  docker-compose.yml  package.json  pnpm-lock.yaml
backend/: .env.example  Cargo.toml  Dockerfile.dev  Dockerfile.prod  diesel.toml
backend/migrations/2024-09-24-021507_create_user/: up.sql
backend/migrations/2025-01-18-125026_create_permission/: up.sql
backend/migrations/2025-02-09-234300_create_group/: up.sql
backend/src/: main.rs  mod.rs  schema.rs
backend/src/core/application/use_cases/: add_permission.rs  authenticate_user.rs  create_group.rs  create_user.rs  delete_group.rs  delete_permission.rs  delete_user.rs  find_group.rs  find_user.rs  list_group.rs  list_user.rs  mod.rs  update_group.rs  update_permission.rs  update_user.rs
backend/src/core/domain/: mod.rs
backend/src/core/domain/entities/: group.rs  mod.rs  permission.rs  user.rs
backend/src/core/domain/repository/: group_repository.rs  mod.rs  permission_repository.rs  user_repository.rs
backend/src/core/domain/services/: authenticator.rs
backend/src/shared/: mod.rs
backend/src/shared/application/errors/: application_error.rs
backend/src/shared/application/use_cases/: use_case.rs
backend/src/shared/domain/errors/: domain_error.rs
backend/src/webserver/: mod.rs
backend/src/webserver/config/: database.rs
backend/src/webserver/controllers/: authentication_controller.rs  group_management_controller.rs  mod.rs  permission_management_controller.rs  user_management_controller.rs
backend/src/webserver/errors/: mod.rs  webservice_error.rs
src/: main.rs  (+2 more)
(+87 files in other folders)
