[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-session = { version = "0.10.0", features = ["redis-session"] }
actix-web = "4.9.0"
argon2 = "0.5.3"
oauth2 = "4.4.2"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "uuid"] }
uuid = { version = "1.10.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
once_cell = "1.20.2"
actix-cors = "0.7.0"
